--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.0.17
   desktop_window: ^0.4.0
   printing: ^5.11.0
+  connectivity_plus: ^3.0.6
   # pdf: ^3.7.2
 
 dev_dependencies:
