--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   # pdf: ^3.7.2
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.10.0
   flutter_test:
     sdk: flutter
 
@@ -61,6 +62,21 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+flutter_icons: 
+  android: "launcher_icon" 
+  ios: true 
+  image_path: "lib/service/asset/logo.png" 
+  min_sdk_android: 21 # android min sdk min:16, default 21 
+  web: 
+    generate: true 
+    image_path: "lib/service/asset/logo.png" 
+    background_color: "#hexcode" 
+    theme_color: "#hexcode" 
+  windows: 
+    generate: true 
+    image_path: "lib/service/asset/logo.png" 
+    icon_size: 48 # min:48, max:256, default: 48
+
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -72,6 +88,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - lib/service/asset/background.jpg
     - lib/service/asset/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
