scanner is implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   fluttertoast: ^8.2.2
   sidebarx: ^0.16.2
   google_fonts: ^6.1.0
+  simple_barcode_scanner: ^0.0.8
+  audioplayers: ^5.2.1
+  url_launcher: ^6.2.3
   # pdf: ^3.7.2
 
 dev_dependencies:
@@ -105,8 +108,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/error.mp3
     - lib/service/asset/background.jpg
     - lib/service/asset/logo.png
+    - assets/beepSound.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
